Fix samples html to adapt to the small schema change

--- a/ui/templates/result_persamples.html
+++ b/ui/templates/result_persamples.html
@@ -19,7 +19,7 @@
                 </ul>
                 {% endwith %}
                 
-                {% with result.individual.value as individual %}
+                {% with result.individuals.0.value as individual %}
                 <ul>
                     <li class="listTitle">Individual</li>
                     {% for var, val in individual.items %}
