--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -116,29 +116,98 @@
 }
 
 .Members{
-    width: 220px;
+    width: 180px;
 }
 
 .Members2{
-    width: 220px;
+    width: 180px;
     background-color: #4961b8;
 }
 
 .Sign-in{
-    width: 120px;
+	width: 176px;
+	margin-left: 20px;
 }
+
+
 .Sign-in2{
-    width: 120px;
+	width: 196px;
+	right: 0px;
     background-color: #e575dd;
 }
 
+.nav3 .Sign-in3{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    width: fit-content;
+	margin-right: 50px;
+}
+
+.nav3 .Sign-in4{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    width: fit-content;
+    margin-right: 50px;
+}
+
+.Sign-in3{
+	width: 176px;
+	margin-left: 40px;
+}
+
+.Sign-in3:hover~.animation {
+	width: 186px;
+	right: 0px;
+	background-color: #e575dd;
+}
+
+.Sign-in4{
+	width: 186px;
+	right: 0px;
+    background-color: #e575dd;
+}
+
+.ls-login-image2{
+	width: 24px;
+	margin-right: 10px;
+}
+
+.ls-login-image{
+	width: 146px;
+	margin-right: 10px;
+	margin-left: 10px;
+}
+
+
+.nav3 .Sign-in{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    width: fit-content;
+    margin-right: 9px;
+}
+
+
+.nav3 .Sign-in2{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    width: 186px;
+}
+
 .Members:hover~.animation {
-	width: 200px;
-	right: 130px;
+	width: 180px;
+	right: 200px;
 	background-color: #4961b8;
 }
 .Sign-in:hover~.animation {
-	width: 120px;
+	width: 190px;
 	right: 0px;
 	background-color: #e575dd;
 }
@@ -194,4 +263,3 @@ button {
     outline: 0;
   }
   
-
