--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -26,6 +26,7 @@ h6 {
   align-items: center;
   justify-content: center;
   margin: 3px;
+  font-size: 14px;
 }
 
 h5 {
@@ -42,6 +43,7 @@ h5 {
   align-items: center;
   justify-content: center;
   margin: 3px;
+  font-size: 14px;
 }
 
 h7 {
