--- a/frontend/src/components/Individuals/Individuals.css
+++ b/frontend/src/components/Individuals/Individuals.css
@@ -1,207 +1,266 @@
 .resultsIndividuals {
-    display: flex;
-    margin-top: 9px;
-    margin-bottom: 40px;
-    margin-left: 40px;
-    margin-right: 40px;
-    padding: 10px;
-    /* width: 30vw; */
-    justify-content: center;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    flex-direction: row;
-
+  display: flex;
+  margin-top: 9px;
+  margin-bottom: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding: 10px;
+  /* width: 30vw; */
+  justify-content: center;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  flex-direction: row;
 }
 
 .resultsIndividuals div {
-    margin: 20px;
+  margin: 20px;
 }
 
 .skipAndLimit {
-    display: flex;
-
+  display: flex;
 }
 
 .diseasesContainer {
-    margin: 0px !important;
+  margin: 0px !important;
 }
 
 .measuresContainer {
-    display: flex;
+  display: flex;
 }
 
 .measures {
-    margin: 20px;
+  margin: 20px;
 }
 
 label {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .skipLimit {
-    width: 100vw;
-    margin-top: 12px;
+  width: 100vw;
+  margin-top: 12px;
 }
 
-
 .skipLimitButton {
-    width: fit-content;
-    background-color: rgb(228 223 223);
-    /* border: none; */
-    padding: 4px;
-    box-shadow: 0px 2px 3px #a3a0a0;
-    border-radius: 3px;
-    font-feature-settings: "pcap", "c2pc";
-    font-variant: all-petite-caps;
-    font-size: 16px;
-    cursor: pointer;
-    /* height: 50%; */
-    margin-left: 9px;
-    color: rgb(0, 0, 0);
+  width: fit-content;
+  background-color: rgb(228 223 223);
+  /* border: none; */
+  padding: 4px;
+  box-shadow: 0px 2px 3px #a3a0a0;
+  border-radius: 3px;
+  font-feature-settings: 'pcap', 'c2pc';
+  font-variant: all-petite-caps;
+  font-size: 16px;
+  cursor: pointer;
+  /* height: 50%; */
+  margin-left: 9px;
+  color: rgb(0, 0, 0);
 }
 
 .skipLimitButton:hover {
-    background: rgb(81, 179, 240);
+  background: rgb(81, 179, 240);
 }
 
 h1 {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 h2 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    color: rgba(12, 16, 64, 0.606);
-    font-size: 13px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  color: rgba(12, 16, 64, 0.606);
+  font-size: 13px;
 }
-
 
 h3 {
-    color: #e16e00;
-    text-transform: uppercase;
-    margin-left: 40px;
-    margin-top: 17px;
-    font-size: 14px;
+  color: #e16e00;
+  text-transform: uppercase;
+  margin-left: 40px;
+  margin-top: 17px;
+  font-size: 14px;
 }
 
-
 h4 {
-    font-size: 12px;
-    color: rgba(12, 16, 64, 0.606);
+  font-size: 12px;
+  color: rgba(12, 16, 64, 0.606);
 }
 
 .selectGranularity h5 {
-    font-size: 14px;
-    color: #8985c1;
+  font-size: 14px;
+  color: #8985c1;
 }
 
 .selectGranularity h4 {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .selectGranularity button:hover {
-    color: rgb(81, 179, 240);
+  color: rgb(81, 179, 240);
 }
 
 .p1 {
-
-    text-transform: uppercase;
-    color: #c11524;
-    line-height: 23px;
-    font-size: 18px;
-    font-weight: bold;
-
+  text-transform: uppercase;
+  color: #c11524;
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .results {
-    flex-wrap: wrap;
-    justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .typeResults {
-    width: fit-content;
-    margin-left: 10px;
-    margin-right: 10px;
-    /* margin-bottom: 0px; */
-    border: none;
-    font-size: 16px;
-    text-decoration: underline;
-    background: white;
-    cursor: pointer;
-    text-underline-offset: 2px;
+  width: fit-content;
+  margin-left: 10px;
+  margin-right: 10px;
+  /* margin-bottom: 0px; */
+  border: none;
+  font-size: 16px;
+  text-decoration: underline;
+  background: white;
+  cursor: pointer;
+  text-underline-offset: 2px;
 }
 
 .skipForm {
-    background: white;
-    border: 2px solid #34495e;
-    margin: 8px;
-    padding: 4px;
-    box-shadow: 2px 1px 3px #a3a0a0;
-    width: 30px;
-    height: 12px;
-    border-radius: 3px;
+  background: white;
+  border: 2px solid #34495e;
+  margin: 8px;
+  padding: 4px;
+  box-shadow: 2px 1px 3px #a3a0a0;
+  width: 30px;
+  height: 12px;
+  border-radius: 3px;
 }
 
 .skipAndLimit {
-    display: flex;
-    align-content: flex-start;
-    /* align-items: center; */
-    margin-left: 43px;
-    margin-bottom: 27px;
-    align-items: center;
-    width: 90%;
+  display: flex;
+  align-content: flex-start;
+  /* align-items: center; */
+  margin-left: 43px;
+  margin-bottom: 27px;
+  align-items: center;
+  width: 90%;
 }
 
-
 .limitForm {
-    background: white;
-    border: 2px solid #34495e;
-    margin: 8px;
-    padding: 4px;
-    box-shadow: 2px 1px 3px #a3a0a0;
-    width: 30px;
-    height: 12px;
-    border-radius: 3px;
+  background: white;
+  border: 2px solid #34495e;
+  margin: 8px;
+  padding: 4px;
+  box-shadow: 2px 1px 3px #a3a0a0;
+  width: 30px;
+  height: 12px;
+  border-radius: 3px;
 }
 
 .modeChangeResults {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 24px;
 }
 
 .modeChangeResults2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* margin-bottom: 44px; */
-    margin-top: -78px;
-    margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-bottom: 44px; */
+  margin-top: -78px;
+  margin-bottom: 24px;
 }
 
 .modeChangeResults h3 {
-    color: #e16e00;
-    text-transform: uppercase;
-    font-size: 14px;
-    margin: 5px !important;
+  color: #e16e00;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin: 5px !important;
 }
-
 
 .modeChangeResults2 h3 {
-    color: #e16e00;
-    text-transform: uppercase;
-    font-size: 14px;
-    margin: 5px !important;
+  color: #e16e00;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin: 5px !important;
 }
 
-
-
 .resultsContainer {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .selectGranularity {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: #262626;
+}
+.ring {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border: 3px solid #bda4a4;
+    border-radius: 50%;
+    margin-top: 52px;
+}
+.ring:before {
+  content: '';
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  width: 100%;
+  height: 100%;
+  border: 3px solid transparent;
+  border-top: 3px solid #526fef;
+  border-right: 3px solid #526fef;
+  border-radius: 50%;
+  animation: animateC 1.6s linear infinite;
+}
+.ring span {
+  display: block;
+  position: absolute;
+  top: calc(50% - 2px);
+  left: 50%;
+  width: 50%;
+  height: 4px;
+  background: transparent;
+  transform-origin: left;
+  animation: animate 1.6s linear infinite;
+}
+.ring span:before {
+  content: '';
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #3fa18e;
+  top: -6px;
+  right: -8px;
+}
+@keyframes animateC {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes animate {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(405deg);
+  }
 }
