--- a/frontend/src/components/SignIn/SignInForm.css
+++ b/frontend/src/components/SignIn/SignInForm.css
@@ -1,182 +1,184 @@
 .login {
-    display: flex;
-    color: white;
-    height: 100vh;
-  }
+  display: flex;
+  color: white;
+  height: 100vh;
+}
 
 .appAside {
-    width: 50%;
-    background-color: #0b5e81;
+  width: 50%;
+  background-color: #ffffff;
 }
 
 .appForm {
-    width: 50%;
-    background-color: #c8c7c7;;
-    padding: 25px 40px;
-    overflow: auto;
+  width: 50%;
+  background-color: #74b1d4;
+  padding: 25px 40px;
+  overflow: auto;
 }
 
 .pageSwitcher {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 5%;
-    justify-content: center;
-    margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 5%;
+  justify-content: center;
+  margin-top: 30px;
 }
 
-
 .formCenter {
-    margin-bottom: 100px;
+  margin-bottom: 100px;
 }
 
 .formTitle {
-    color: #707c8b;
-    font-weight: 300;
-    margin-bottom: 50px;
+  color: #707c8b;
+  font-weight: 300;
+  margin-bottom: 50px;
 }
 
 .formTitleLink {
-    color: #d45d68;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 1.7em;
-    margin: 0 10px;
-    padding-bottom: 5px;
+  color: #d45d68;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.7em;
+  margin: 0 10px;
+  padding-bottom: 5px;
 }
 
 .formTitleLink:hover {
-    color: #5d75d4;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 1.7em;
-    margin: 0 10px;
-    padding-bottom: 5px;
-    font-weight: 600;
+  color: #5d75d4;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.7em;
+  margin: 0 10px;
+  padding-bottom: 5px;
+  font-weight: 600;
 }
 
-.appForm h3{
-    color: #e16e00;
-    text-transform: uppercase;
-    margin-left: 105px;
-    margin-top: 17px;
-    font-size: 14px;
+.appForm h3 {
+  color: #e16e00;
+  text-transform: uppercase;
+  margin-left: 105px;
+  margin-top: 17px;
+  font-size: 14px;
 }
 
 .formTitleLink-active {
-    color: white;
-    font-size: 20px;
-    text-decoration: underline;
-    text-underline-offset: 6px;
-    margin: 9px;
+  color: white;
+  font-size: 20px;
+  text-decoration: underline;
+  text-underline-offset: 6px;
+  margin: 9px;
 }
 
 .formField {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
-.formFields{
-    margin-left: 89px;
+.formFields {
+  margin-left: 89px;
 }
 
 .formFieldLabel {
-    display: block;
-    text-transform: uppercase;
-    font-size: 0.9em;
-    color: white;
+  display: block;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  color: white;
 }
 
 .formFieldInput {
-    width: 85%;
-    background-color: transparent;
-    border: none;
-    color: white;
-    outline: none;
-    border-bottom: 1px solid #445366;
-    font-size: 1em;
-    font-weight: 300;
-    padding-bottom: 10px;
-    margin-top: 10px;
+  width: 85%;
+  background-color: transparent;
+  border: none;
+  color: white;
+  outline: none;
+  border-bottom: 1px solid #445366;
+  font-size: 1em;
+  font-weight: 300;
+  padding-bottom: 10px;
+  margin-top: 10px;
 }
 
 .formFieldInput::placeholder {
-    color: #616e7f;
+  color: #616e7f;
 }
 
 .formFieldButton {
-    background-image: linear-gradient(356deg, #6ac5ff 50%, #86d2ff 80%);
-    color: white;
-    border: none;
-    outline: none;
-    border-radius: 25px;
-    padding: 16px 40px;
-    font-size: 16px;
-    font-weight: 500;
-    box-shadow: 2px 5px 5px #a3a0a0;
-    cursor: pointer;
+  background-image: linear-gradient(356deg, #759797 20%, #81a3a3 80%);
+  color: white;
+  text-transform: uppercase;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  padding: 16px 35px;
+  font-size: 14px;
+  font-weight: 400;
+  box-shadow: 0.2px 0.3px 1px grey;
+  cursor: pointer;
+  margin-top: 20px;
 }
 
-.formFieldButton:hover{
-    background: #86d2ff;
+.formFieldButton:hover {
+  background: #9aadbb;
 }
 
 .formFieldLink {
-    color: #66707d;
-    text-decoration: none;
-    display: inline-block;
-    border-bottom: 1.5px solid #d45d68;
-    padding-bottom: 5px;
-    margin-left: 6%;
-    padding-top: 22px;
+  color: #66707d;
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1.5px solid #d45d68;
+  padding-bottom: 5px;
+  margin-left: 6%;
+  padding-top: 22px;
 }
 
 .formFieldLink:hover {
-    color: #5199e2;
-    text-decoration: none;
-    display: inline-block;
-    border-bottom: 1.5px solid #d45d68;
-    padding-bottom: 5px;
-    margin-left: 6%;
-    padding-top: 22px;
-    font-weight: 600;
+  color: #5199e2;
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1.5px solid #d45d68;
+  padding-bottom: 5px;
+  margin-left: 6%;
+  padding-top: 22px;
+  font-weight: 600;
 }
 
 .formFieldCheckboxLabel {
-    color: #646f7d;
-    font-size: 0.9em;
+  color: #646f7d;
+  font-size: 0.9em;
 }
 
 .formFieldTermsLink {
-    color: white;
-    border-bottom: 1px solid black;
-    text-decoration: none;
-    display: inline-block;
-    padding-bottom: 2px;
-    margin-left: 5px;
+  color: white;
+  border-bottom: 1px solid black;
+  text-decoration: none;
+  display: inline-block;
+  padding-bottom: 2px;
+  margin-left: 5px;
 }
 
 @media (max-width: 700px) {
-
-
-.appAside {
+  .appAside {
     width: 0%;
-}
+  }
 
-.appForm{
+  .appForm {
     width: 100%;
-}
+  }
 
-.formField{
+  .formField {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.formFieldCheckboxLabel {
+  }
+  .formFieldCheckboxLabel {
     color: #646f7d;
     font-size: 14px;
-}
+  }
 
-.formFieldLink{
+  .formFieldLink {
     color: #66707d;
     text-decoration: none;
     display: inline-block;
@@ -184,8 +186,5 @@
     padding-bottom: 5px;
     margin-top: 29px;
     margin-left: 0%;
-
-}
-
-
+  }
 }
