--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -262,11 +262,98 @@ html {
 }
 
 .queryExpansion {
-  padding: 12px;
+  padding: 14px;
   margin-bottom: 33px;
-  border-radius: 5px;
-  border: solid;
+  border-radius: 3px;
+  background-color: #beced8;
   margin-top: 0px;
+  color: #414448;
+}
+.queryExpansion:hover {
+  border: solid #414448;
+}
+
+.btn-3 {
+  display: inline-block;
+  position: relative;
+  background: none;
+  border: none;
+  color: #34495e;
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: -10px;
+  margin-bottom: 35px;
+  background: rgba(0, 0, 0, 0.09);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+.spanQE {
+  display: block;
+  padding: 14px 15px;
+}
+
+.btn-3::before,
+.btn-3::after {
+  content: '';
+  width: 0;
+  height: 1.6px;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #f3b395;
+}
+
+.spanQE::before,
+.spanQE::after {
+  content: '';
+  width: 1.6px;
+  height: 0;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #f3b395;
+}
+
+.btn-3:hover::before,
+.btn-3:hover::after {
+  width: 100%;
+}
+
+.btn-3:hover .spanQE::before,
+.btn-3:hover .spanQE::after {
+  height: 100%;
+}
+
+.btn-3::after {
+  left: 0;
+  bottom: 0;
+  transition-delay: 0.6s;
+}
+
+.spanQE::after {
+  transition-delay: 0.4s;
+  right: 0;
+  bottom: 0;
+}
+.btn-3::before {
+  right: 0;
+  top: 0;
+  transition-delay: 0.2s;
+}
+.spanQE::before {
+  transition-delay: 0s;
+  left: 0;
+  top: 0;
+}
+
+.btn-3:hover::after {
+  transition-delay: 0s;
+}
+.btn-3:hover .spanQE::after {
+  transition-delay: 0.2s;
+}
+.btn-3:hover::before {
+  transition-delay: 0.4s;
+}
+.btn-3:hover .spanQE::before {
+  transition-delay: 0.6s;
 }
 
 .resultsOptions {
@@ -274,18 +361,6 @@ html {
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
-}
-
-
-
-
-
-
-.queryExpansion:hover {
-  border: solid;
-  padding: 12px;
-  border-radius: 4px;
-  background-color: #eaf5fc;
 }
 
 .buttonVariants {
@@ -296,8 +371,6 @@ html {
   padding: 7px;
   cursor: pointer;
 }
-
-
 
 .buttonVariants:hover {
   margin-top: 12px;
