--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -261,18 +261,6 @@ html {
   font-size: 12px;
 }
 
-.queryExpansion {
-  padding: 14px;
-  margin-bottom: 33px;
-  border-radius: 3px;
-  background-color: #beced8;
-  margin-top: 0px;
-  color: #414448;
-}
-.queryExpansion:hover {
-  border: solid #414448;
-}
-
 .btn-3 {
   display: inline-block;
   position: relative;
@@ -298,7 +286,7 @@ html {
   height: 1.6px;
   position: absolute;
   transition: all 0.2s linear;
-  background: #f3b395;
+  background: #e07a1a;
 }
 
 .spanQE::before,
@@ -308,7 +296,7 @@ html {
   height: 0;
   position: absolute;
   transition: all 0.2s linear;
-  background: #f3b395;
+  background: #e07a1a;
 }
 
 .btn-3:hover::before,
