--- a/frontend/src/components/Cohorts/Cohorts.css
+++ b/frontend/src/components/Cohorts/Cohorts.css
@@ -274,11 +274,11 @@ h12 {
 @keyframes loader {
   0% {
     transform: scaleY(0.1);
-    background: #34495e;
+    background: #2f89e2;
   }
   50% {
     transform: scaleY(1);
-    background: #6ad513;
+    background: #8fed0b;
   }
   100% {
     transform: scaleY(0.1);
